# cpp_cuda_template

./: CMakeLists.txt  README.md
cuda/: CMakeLists.txt  template.cu
include/: cuda_kernels.h
src/: CMakeLists.txt
test/: CMakeLists.txt  test_template.cpp
